@@ -4,7 +4,7 @@
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
 
 [sdl]
-#        fullscreen: Start DOSBox-X directly in fullscreen. (Press Host+F to go back)
+#        fullscreen: Start DOSBox-X directly in fullscreen. (Press [F11/F12]+F to go back)
 #        fulldouble: Use double buffering in fullscreen. It can reduce screen flickering, but it can also result in a slow DOSBox-X.
 #    fullresolution: What resolution to use for fullscreen: original, desktop or a fixed size (e.g. 1024x768).
 #                        Using your monitor's native resolution with aspect=true might give the best results.
