@@ -1,6 +1,8 @@
 0.83.4
   - Fixed loading saved states in fullscreen mode with
     the "aspect=true" setting. (Wengier)
+  - Add key mapper for sending the Ctrl-Alt-Del key,
+    with HOST(F11/F12)+Del by default. (Wengier)
   - Added dosbox-x.conf setting to ignore the EGA/VGA
     "extended memory" bit. It was originally defined
     back when stock EGA/VGA cards could ship with 64KB
